--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     	<script src="p5.sound.min.js"></script>
     	<link rel="stylesheet" type="text/css" href="style.css">
     	<meta charset="utf-8">
-    	<title>JetSkii Sound</title>
+    	<title>JetSkii</title>
   </head>
   <body>
-    <script src="sketch.js"></script>
+    <div class="wrapper">
+      <script src="sketch.js"></script>
+    </div>
 	</body>
 </html>
